# servant-beam-realworld-example-app

./: .envrc.example  .ghci  .gitignore  .hlint.yaml  .travis.yml  LICENSE  README.md  default.nix  package.nix  package.yaml  realworld-conduit.cabal  release.nix  run.sh  shell.nix
.buildkite/: pipeline.yml
.buildkite/hooks/: pre-command
.buildkite/scripts/: test
.travis/: envrc  setup  shell.nix  test  tools.nix
app/: Main.hs
database/migrations/: sqitch.plan
database/migrations/deploy/: create-article-tags.sql  create-articles.sql  create-comments.sql  create-favorites.sql  create-follows.sql  create-tags.sql  create-users.sql
database/migrations/revert/: create-article-tags.sql  create-articles.sql  create-comments.sql  create-favorites.sql  create-follows.sql  create-tags.sql  create-users.sql
database/migrations/verify/: create-article-tags.sql  create-articles.sql  create-comments.sql  create-favorites.sql  create-follows.sql  create-tags.sql  create-users.sql
database/scripts/: create  drop  init  migrate  reset  setup  start  stop
dev/: deploy  generate-secret  register-deps  start  update-dep  update-nixpkgs  watch-serve  watch-tests
nix/: beam.json  beam.nix  nixpkgs-rev.txt  nixpkgs-sha.txt  nixpkgs.json  nixpkgs.nix  tools.nix  validation.json  validation.nix
nix/beam/: rev  sha
nix/nixpkgs/: rev  sha
nix/scripts/: register-deps  update-dep
nix/validation/: rev  sha
scripts/: dev
spec/: ExampleSpec.hs
spec/RealWorld/Conduit/: Spec.hs
spec/RealWorld/Conduit/Articles/: DatabaseSpec.hs  WebSpec.hs
spec/RealWorld/Conduit/Articles/Database/Article/: AttributesSpec.hs
spec/RealWorld/Conduit/Spec/: Database.hs  Web.hs
spec/RealWorld/Conduit/Users/: DatabaseSpec.hs  WebSpec.hs
spec/RealWorld/Conduit/Users/Database/User/: AttributesSpec.hs
spec/Test/Hspec/Wai/: Extended.hs
src/: Prelude.hs
src/Database/Beam/Postgres/: Extended.hs
src/RealWorld/Conduit/: Attribute.hs  Database.hs  Environment.hs  Handle.hs  Options.hs  Validation.hs  Web.hs
src/RealWorld/Conduit/Articles/: Article.hs  Database.hs  Web.hs
src/RealWorld/Conduit/Articles/Article/: Attributes.hs
src/RealWorld/Conduit/Articles/Database/: Article.hs  ArticleTag.hs  Commands.hs  Decorated.hs  Favorite.hs  Queries.hs
src/RealWorld/Conduit/Articles/Database/Article/: Attributes.hs
src/RealWorld/Conduit/Articles/Web/: All.hs  Article.hs  Articles.hs  Create.hs  Destroy.hs  Favorite.hs  Feed.hs  Unfavorite.hs  Update.hs  View.hs
src/RealWorld/Conduit/Articles/Web/Article/: Attributes.hs
src/RealWorld/Conduit/Comments/: Comment.hs  Database.hs  Web.hs
src/RealWorld/Conduit/Comments/Database/: Comment.hs
src/RealWorld/Conduit/Comments/Web/: Comment.hs
src/RealWorld/Conduit/Tags/: Database.hs  Web.hs
src/RealWorld/Conduit/Tags/Database/: Tag.hs
src/RealWorld/Conduit/Users/: Database.hs  Profile.hs  Web.hs
src/RealWorld/Conduit/Users/Database/: Commands.hs  Credentials.hs  Decorated.hs  Follow.hs  Queries.hs  User.hs
src/RealWorld/Conduit/Users/Database/User/: Attributes.hs
src/RealWorld/Conduit/Users/User/: Attributes.hs
src/RealWorld/Conduit/Users/Web/: Account.hs  Claim.hs  Current.hs  Login.hs  Profile.hs  Profiles.hs  Register.hs
src/RealWorld/Conduit/Users/Web/Current/: Update.hs  View.hs
src/RealWorld/Conduit/Users/Web/Profiles/: Follow.hs  Unfollow.hs  View.hs
src/RealWorld/Conduit/Web/: API.hs  Auth.hs  Errors.hs  Health.hs  Namespace.hs  Swagger.hs
src/RealWorld/Conduit/Web/Health/: Service.hs
