name:                realworld-conduit
version:             0.1.0.0
synopsis:            Exemplary fullstack Medium.com clone powered by Servant and Beam
description:         The http://realworld.io specification implemented using Servant for the web application layer and Beam for persistence.
license:             BSD3
license-file:        LICENSE
author:              Brad Parker
maintainer:          hi@bradparker.com
build-type:          Simple
cabal-version:       >=1.10

executable realworld-conduit
  main-is:
    Main.hs
  build-depends:
    base >=4.10 && <4.11
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall

test-suite spec
  type:
    exitcode-stdio-1.0
  main-is:
    Spec.hs
  build-depends:
    base >=4.10 && <4.11,
    hspec
  hs-source-dirs:
    spec
  default-language:
    Haskell2010
  ghc-options:
    -Wall
  other-modules:
    ExampleSpec
