cabal-version: 2.2
name:          realworld-conduit
version:       0.1.0.0
synopsis:      Exemplary fullstack Medium.com clone powered by Servant and Beam
description:   The http://realworld.io specification implemented using Servant for the web application layer and Beam for persistence.
author:        Brad Parker
maintainer:    hi@bradparker.com
license:       BSD-3-Clause
license-file:  LICENSE
build-type:    Simple

common ghc
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    PartialTypeSignatures
    ScopedTypeVariables
    StandaloneDeriving
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
  ghc-options: -Wall
  default-language: Haskell2010

common deps
  build-depends:
      aeson
    , base-noprelude >=4.10 && <4.12
    , beam-core
    , beam-postgres
    , bytestring
    , case-insensitive
    , conduit
    , containers
    , data-default
    , http-types
    , insert-ordered-containers
    , jose
    , lens
    , monad-control
    , mtl
    , optparse-applicative
    , postgresql-simple
    , relude
    , resource-pool
    , scrypt
    , servant
    , servant-auth
    , servant-auth-server
    , servant-auth-swagger
    , servant-server
    , servant-swagger
    , servant-swagger-ui
    , servant-swagger-ui-core
    , swagger2
    , text
    , time
    , transformers
    , validation
    , vector
    , wai
    , wai-extra
    , wai-cors
    , warp

library
  import: ghc
  import: deps
  exposed-modules:
      Database.Beam.Postgres.Extended
      Prelude
      RealWorld.Conduit.Articles.Article
      RealWorld.Conduit.Articles.Article.Attributes
      RealWorld.Conduit.Articles.Database
      RealWorld.Conduit.Articles.Database.Article
      RealWorld.Conduit.Articles.Database.ArticleTag
      RealWorld.Conduit.Articles.Database.Favorite
      RealWorld.Conduit.Articles.Web
      RealWorld.Conduit.Articles.Web.All
      RealWorld.Conduit.Articles.Web.Articles
      RealWorld.Conduit.Articles.Web.Create
      RealWorld.Conduit.Articles.Web.Destroy
      RealWorld.Conduit.Articles.Web.Favorite
      RealWorld.Conduit.Articles.Web.Feed
      RealWorld.Conduit.Articles.Web.Unfavorite
      RealWorld.Conduit.Articles.Web.Update
      RealWorld.Conduit.Articles.Web.View
      RealWorld.Conduit.Attribute
      RealWorld.Conduit.Comments.Comment
      RealWorld.Conduit.Comments.Database
      RealWorld.Conduit.Comments.Database.Comment
      RealWorld.Conduit.Comments.Web
      RealWorld.Conduit.Database
      RealWorld.Conduit.Environment
      RealWorld.Conduit.Options
      RealWorld.Conduit.Tags.Database
      RealWorld.Conduit.Tags.Database.Tag
      RealWorld.Conduit.Tags.Web
      RealWorld.Conduit.Users.Database
      RealWorld.Conduit.Users.Database.Credentials
      RealWorld.Conduit.Users.Database.Follow
      RealWorld.Conduit.Users.Database.User
      RealWorld.Conduit.Users.Profile
      RealWorld.Conduit.Users.User.Attributes
      RealWorld.Conduit.Users.Web
      RealWorld.Conduit.Users.Web.Account
      RealWorld.Conduit.Users.Web.Claim
      RealWorld.Conduit.Users.Web.Current
      RealWorld.Conduit.Users.Web.Current.Update
      RealWorld.Conduit.Users.Web.Current.View
      RealWorld.Conduit.Users.Web.Login
      RealWorld.Conduit.Users.Web.Profiles
      RealWorld.Conduit.Users.Web.Profiles.Follow
      RealWorld.Conduit.Users.Web.Profiles.Unfollow
      RealWorld.Conduit.Users.Web.Profiles.View
      RealWorld.Conduit.Users.Web.Register
      RealWorld.Conduit.Validation
      RealWorld.Conduit.Web
      RealWorld.Conduit.Web.API
      RealWorld.Conduit.Web.Auth
      RealWorld.Conduit.Web.Errors
      RealWorld.Conduit.Web.Health
      RealWorld.Conduit.Web.Health.Service
      RealWorld.Conduit.Web.Namespace
      RealWorld.Conduit.Web.Swagger
  other-modules:
      Paths_realworld_conduit
  hs-source-dirs:
      src

executable realworld-conduit
  import: ghc
  import: deps
  main-is: Main.hs
  other-modules:
      Paths_realworld_conduit
  hs-source-dirs:
      app
  build-depends:
      realworld-conduit

test-suite spec
  import: ghc
  import: deps
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      RealWorld.Conduit.Articles.Database.Article.AttributesSpec
      RealWorld.Conduit.Articles.DatabaseSpec
      RealWorld.Conduit.Articles.WebSpec
      RealWorld.Conduit.Spec
      RealWorld.Conduit.Spec.Database
      RealWorld.Conduit.Spec.Web
      RealWorld.Conduit.Users.Database.User.AttributesSpec
      RealWorld.Conduit.Users.DatabaseSpec
      RealWorld.Conduit.Users.WebSpec
      Test.Hspec.Wai.Extended
  hs-source-dirs:
      spec
  build-depends:
      hspec
    , hspec-wai
    , hspec-wai-json
    , realworld-conduit
  default-extensions:
    QuasiQuotes
